k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page # Nombre de tu despliegue
  namespace: landing-page
spec:
  replicas: 2 # Puedes ajustar el número de réplicas
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page # Nombre del contenedor
        image: dmarmijosa/landing-page:latest # Asegúrate de que esta es la imagen que construiste
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000 # El puerto que expone tu aplicación Next.js
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 10
        # Si tienes secretos, agrégalos aquí:
        # env:
        #   - name: MY_SECRET_ENV_VAR
        #     valueFrom:
        #       secretKeyRef:
        #         name: my-nextjs-secret # Nombre del Secret
        #         key: API_KEY_NAME # Clave dentro del Secret
