k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: danny-armijos
spec:
  selector:
    app: landing-page
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
