k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
