k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  namespace: landing-page
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod # Debe coincidir con tu ClusterIssuer
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($scheme = http) {
        return 308 https://$host$request_uri;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: dmarmijosa.com # ¡Tu dominio!
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page # Nombre de tu Service
            port:
              number: 3000 # Puerto del Service
  tls:
  - hosts:
    - dmarmijosa.com # ¡Tu dominio!
    secretName: dmarmijosa-tls # ¡Nombre del secreto TLS que creará cert-manager! (Debe coincidir con 05-certificate.yaml)
